omq-zeromq/tests/trybuild/compat-fail/peer_identity_util_path.rs
use zeromq::util::PeerIdentity;

fn main() {
    let _identity = PeerIdentity::new();
}
